--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -17,10 +19,19 @@
       <!-- TODO: PART I Add your own images and use CSS flex to make sure they work on different screen sizes -->
       <div class="gallery-item-container">
         <img class="gallery-item" src="./assets/jeff.jpg" alt="jeff watching u">
+        <img class="gallery-item" src="./assets/croissant.jpeg" alt="croissant with white background">
+        <img class="gallery-item" src="./assets/croissant.jpeg" alt="croissant with white background">
+        <img class="gallery-item" src="./assets/croissant.jpeg" alt="croissant with white background">
+        <img class="gallery-item" src="./assets/croissant.jpeg" alt="croissant with white background">
+        <img class="gallery-item" src="./assets/choux.jpeg" alt="choux au craquelin with flower">
+        <img class="gallery-item" src="./assets/macarons.jpeg" alt="colorful macarons">
+
       </div>
 
+      <div id = "add"></div>
+
       <!-- TODO: PART II Uncomment the line below, and hook up this button to display data from an API -->
-      <!-- <button onclick="">Press this button to display some fruit data</button> -->
+      <button onclick="updatePage()">Press this button to display some fruit data</button>
     </div>
   </body>
 
